--- a/templates/index.html
+++ b/templates/index.html
@@ -255,22 +255,22 @@ Insight into student challenges and needs
                         <div class="pricing_design">
                             <div class="single-pricing">
                                 <div class="price-head">		
-                                    <h2>Starter</h2>
-                                    <h1>$0</h1>
-                                    <span>/Monthly</span>
+                                    <h2>BASIC</h2>
+                                    <h1>INR 200</h1>
+                                    <!-- <span>/per call</span> -->
                                 </div>
                                 <ul>
-                                    <li><b>15</b> website</li>
-                                    <li><b>50GB</b> Disk Space</li>
-                                    <li><b>50</b> Email</li>
-                                    <li><b>50GB</b> Bandwidth</li>
-                                    <li><b>10</b> Subdomains</li>
-                                    <li><b>Unlimited</b> Support</li>
+                                    <li><b>1</b> call</li>
+                                    <li><b>30</b> Minutes</li>
+                                    <li>AI Search</li>
+                                    <li>Top Mentor</li>
+                                    <li>(IITans, NITans)</li>
+                                    <!-- <li><b>Unlimited</b> Support</li> -->
                                 </ul>
                                 <div class="pricing-price">
                                     
                                 </div>
-                                <a href="#" class="price_btn">Order Now</a>
+                                <a href="/accounts/google/login/" class="price_btn">Book Now</a>
                             </div>
                         </div>
                     </div><!--- END COL -->	
@@ -278,22 +278,21 @@ Insight into student challenges and needs
                         <div class="pricing_design">
                             <div class="single-pricing">
                                 <div class="price-head">		
-                                    <h2>Personal</h2>
-                                    <h1 class="price">$29</h1>
-                                    <span>/Monthly</span>
+                                    <h2>PREMIUM</h2>
+                                    <h1>INR 900</h1>
+                                    <!-- <span>/per call</span> -->
                                 </div>
                                 <ul>
-                                    <li><b>15</b> website</li>
-                                    <li><b>50GB</b> Disk Space</li>
-                                    <li><b>50</b> Email</li>
-                                    <li><b>50GB</b> Bandwidth</li>
-                                    <li><b>10</b> Subdomains</li>
-                                    <li><b>Unlimited</b> Support</li>
+                                    <li><b>5</b> calls</li>
+                                    <li><b>30</b> Minutes each</li>
+                                    <li>AI Search</li>
+                                    <li>Top Mentor</li>
+                                    <li>(IITans, NITans)</li>
                                 </ul>
                                 <div class="pricing-price">
                                     
                                 </div>
-                                <a href="#" class="price_btn">Order Now</a>
+                                <a href="/accounts/google/login/" class="price_btn">Book Now</a>
                             </div>
                         </div>
                     </div><!--- END COL -->	
@@ -301,22 +300,22 @@ Insight into student challenges and needs
                         <div class="pricing_design">
                             <div class="single-pricing">
                                 <div class="price-head">		
-                                    <h2>Ultimate</h2>
-                                    <h1 class="price">$49</h1>
-                                    <span>/Monthly</span>
+                                    <h2>INSTITUTES</h2>
+                                    <h1 class="price">5 calls to each Student</h1>
+                                    <!-- <span>/Monthly</span> -->
                                 </div>
                                 <ul>
-                                    <li><b>15</b> website</li>
-                                    <li><b>50GB</b> Disk Space</li>
-                                    <li><b>50</b> Email</li>
-                                    <li><b>50GB</b> Bandwidth</li>
-                                    <li><b>10</b> Subdomains</li>
-                                    <li><b>Unlimited</b> Support</li>
+                                    <li><b> &lt;1000 students</b> INR 800</li>
+                                    <li><b>1000 - 5000 students</b> INR 750</li>
+                                    <li><b>&gt;5000 students</b> INR 700</li>
+                                    <!-- <li><b>50GB</b> Bandwidth</li> -->
+                                    <!-- <li><b>10</b> Subdomains</li>
+                                    <li><b>Unlimited</b> Support</li> -->
                                 </ul>
                                 <div class="pricing-price">
                                     
                                 </div>
-                                <a href="#" class="price_btn">Order Now</a>
+                                <a href="#contact" class="price_btn">Contact Us</a>
                             </div>
                         </div>
                     </div><!--- END COL -->			  
@@ -327,7 +326,7 @@ Insight into student challenges and needs
 
         <!--Testimonial Section-->
 
-        
+<!--         
 <div class="container py-5" style="background-color: #c4d3df;">
     <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -375,7 +374,7 @@ Insight into student challenges and needs
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-</div>
+</div> -->
         
         
               <!-- Team-->
@@ -463,6 +462,10 @@ Insight into student challenges and needs
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
                     {% comment %} <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> {% endcomment %}
                 </div>
+                 <p style="color : white">
+
+            You can also mail us at <strong><a href=mailto:team@aeduz.com>team@aeduz.com</a></strong>.
+        </p>
 
                 <form id="contactForm" method="post" action="/submit">{%csrf_token%}
                     <div class="row align-items-stretch mb-5">
