--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10947,7 +10947,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: black;
-  /* background-image: url("../aeduz_back.jpg"); */
+  background-image: url("../back_aeduz.jpg");
   background-color: #c4d3df;
   background-repeat: no-repeat;
   background-attachment: scroll;
