--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
                     
                     Guiding DREAMS Unlocking POTENTIAL
                 </div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="https://koalendar.com/e/meet-with-aeduz">Book 1:1 Call</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="{% provider_login_url 'google'%}?next=/dashboard">Book 1:1 Call</a>
             </div>
         </header>
        
@@ -150,9 +150,7 @@ AeduZ is your premier destination for personalized mentorship. Through our innov
                                 {% comment %} <h4>March 2011</h4> {% endcomment %}
                                 <h4 class="subheading">Our Vision</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">
-                                We aim to facilitate uninterrupted and hassle-free study experiences for nationwide students, ensuring they can focus on their academic pursuits without unnecessary stress or distractions.
-                            </p></div>
+                            <div class="timeline-body">
                         </div>
                     </li>
                 </div>
