--- a/templates/index.html
+++ b/templates/index.html
@@ -139,19 +139,27 @@
                                 <h4 class="subheading">Who Are We?</h4>
                             </div>
                             <div class="timeline-body"><p class="text-muted">
-AeduZ is your premier destination for personalized mentorship. Through our innovative platform & network of experienced mentors, we empower the students, filled them with confidence & resilience to overcome challenges & achieve their educational goals.
+AeduZ is your premier destination for personalized mentorship. Through our innovative platform &amp; network of experienced mentors, we empower the students, filled them with confidence &amp; resilience to overcome challenges & achieve their educational goals.
                             </p></div>
+                      
+                  
+
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="{% static 'assets/img/about/2.jpg' %} " alt="..." /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="{% static 'assets/img/about/2.jpg' %} " alt="..." />
+                        </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 {% comment %} <h4>March 2011</h4> {% endcomment %}
                                 <h4 class="subheading">Our Vision</h4>
+
                             </div>
-                            <div class="timeline-body">
+                            <div class="timeline-body"><p class="text-muted">
+                                We aim to facilitate uninterrupted and hassle-free study experiences for nationwide students, ensuring they can focus on their academic pursuits without unnecessary stress or distractions.
+                                                            </p></div>
                         </div>
+                     
                     </li>
                 </div>
 
@@ -208,9 +216,10 @@ AeduZ is your premier destination for personalized mentorship. Through our innov
             </div>
        
        
+            <hr style="height: 2x;color: white;">
 
         <!-- benifits for mentors-->
-        <div class="container">
+        <div class="container " style="background-color: #8a9db1; border-radius: 20px;">
         <div class="row">
         <div class="col-md-6">
         <h2>BENEFITS for IITians after becoming AeduZ MENTORS</h2>
@@ -299,15 +308,13 @@ Insight into student challenges and needs
                                 <div class="price-head">		
                                     <h2>INSTITUTES</h2>
                                     <h1 class="price">5 calls to each Student</h1>
-                                    <!-- <span>/Monthly</span> -->
+                                  
                                 </div>
                                 <ul>
                                     <li><b> &lt;1000 students</b> INR 800</li>
                                     <li><b>1000 - 5000 students</b> INR 750</li>
                                     <li><b>&gt;5000 students</b> INR 700</li>
-                                    <!-- <li><b>50GB</b> Bandwidth</li> -->
-                                    <!-- <li><b>10</b> Subdomains</li>
-                                    <li><b>Unlimited</b> Support</li> -->
+                                   
                                 </ul>
                                 <div class="pricing-price">
                                     
@@ -315,7 +322,8 @@ Insight into student challenges and needs
                                 <a href="#contact" class="price_btn">Contact Us</a>
                             </div>
                         </div>
-                    </div><!--- END COL -->			  
+                    </div>
+                    <!--- END COL -->			  
                 </div><!--- END ROW -->
             </div><!--- END CONTAINER -->
         </section>
