--- a/templates/book_pay.html
+++ b/templates/book_pay.html
@@ -11,26 +11,12 @@
     </div>
 
 
-    {% if not payment %}
-    <form method="post" action="">{% csrf_token %}
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Enter Name</label>
-          <input type="text" name="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Enter Amount</label>
-          <input type="number" name="amount" class="form-control" id="exampleInputPassword1">
-        </div>
-  
-        <button type="submit" class="btn btn-success btn-block">Submit</button>
-      </form>
-
-    {% else %}
+    
       <button class="btn btn-success btn-block text-center" id="rzp-button1">Pay</button> {% csrf_token %}
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
 var options = {
-    "key": "Ng5H3tNTGsxazN", // Enter the Key ID generated from the Dashboard
+    "key": "rzp_live_WKs3ynkTOP8lcd", // Enter the Key ID generated from the Dashboard
     "amount": "{{payment.amount}}", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
     "currency": "INR",
     "name": "AeduZ ", //your business name
@@ -67,6 +53,5 @@ rzp1.on('payment.failed', function (response){
 
 </script>
 
-      {% endif %}
 </div>
 {% endblock content %}
