--- a/templates/book_pay.html
+++ b/templates/book_pay.html
@@ -23,7 +23,7 @@ var options = {
     "description": "Test Transaction",
     "image": "https://aeduz.com/static/aeduz_transparent.png",
     "order_id": "{{payment.id}}", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-    "callback_url": "https://127.0.0.1:8000/success",
+    "callback_url": "https://aeduz.com/dashboard",
     "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information especially their phone number
         "name": "{{payment.notes.name}}", //your customer's name
         "email": "{{payment.notes.name}}@example.com",
