--- a/templates/fail.html
+++ b/templates/fail.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="text-center mt-5 pt-5">
-    <img src="https://icons.veryicon.com/png/o/miscellaneous/new-version-of-star-selected-icon/success-26.png" style="height: 200px;" alt="" class="img-fluid">
+    {% comment %} <img src="https://icons.veryicon.com/png/o/miscellaneous/new-version-of-star-selected-icon/success-26.png" style="height: 200px;" alt="" class="img-fluid"> {% endcomment %}
     <h2 class="mt-4">
         Your Payment Failed !
     </h2>
