--- a/templates/gfg_index.html
+++ b/templates/gfg_index.html
@@ -84,7 +84,7 @@
 	currency: "{{ currency }}",
 	
 	// Your/store name.
-	name: "Dj Razorpay", 
+	name: "AeduZ ", 
 	
 	// Pass the `id` obtained in the response of Step 1
 	order_id: "{{ razorpay_order_id }}", 
