--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,13 @@
                     
                     Guiding DREAMS Unlocking POTENTIAL
                 </div>
+                {% if user.is_authenticated %}
+                {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
+                <li class="nav-item"><a class="nav-link" href="/accounts/google/login/">Google SignUp</a></li> {% endcomment %}
+                <a class="btn btn-primary btn-xl text-uppercase" href="/dashboard">Book 1:1 Call</a>
+            {% else %}
                 <a class="btn btn-primary btn-xl text-uppercase" href="{% provider_login_url 'google'%}?next=/dashboard">Book 1:1 Call</a>
+            {% endif %}
             </div>
         </header>
        
@@ -256,13 +262,20 @@ Insight into student challenges and needs
                 <div class="section-title text-center">
                     <h2>Pricing Plans</h2>
                 </div>				
-                <div class="row text-center">									
+                <div class="row text-center">	
+                    <div class="col-lg-1 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s" data-wow-offset="0" style="visibility: visible; animation-duration: 1s; animation-delay: 0.3s; animation-name: fadeInUp;">
+                       
+                    </div>								
                     <div class="col-lg-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0" style="visibility: visible; animation-duration: 1s; animation-delay: 0.1s; animation-name: fadeInUp;">
                         <div class="pricing_design">
                             <div class="single-pricing">
                                 <div class="price-head">		
                                     <h2>BASIC</h2>
-                                    <h1>INR 200</h1>
+                                    
+                                    
+                                    <h1>INR 50 <span><strike style="color: red; font-size: 17px;">INR 200</strike></span></h1>
+                                    
+                                    <span style="color: green;">75% off for first month</span>
                                     <!-- <span>/per call</span> -->
                                 </div>
                                 <ul>
@@ -270,7 +283,7 @@ Insight into student challenges and needs
                                     <li><b>30</b> Minutes</li>
                                     <li>AI Search</li>
                                     <li>Top Mentor</li>
-                                    <li>(IITans, NITans)</li>
+                                    <li>(IITians, NITians)</li>
                                     <!-- <li><b>Unlimited</b> Support</li> -->
                                 </ul>
                                 <div class="pricing-price">
@@ -280,12 +293,19 @@ Insight into student challenges and needs
                             </div>
                         </div>
                     </div><!--- END COL -->	
+                   
+
+                    <div class="col-lg-2 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s" data-wow-offset="0" style="visibility: visible; animation-duration: 1s; animation-delay: 0.3s; animation-name: fadeInUp;">
+                       
+                    </div>
                     <div class="col-lg-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0" style="visibility: visible; animation-duration: 1s; animation-delay: 0.2s; animation-name: fadeInUp;">
                         <div class="pricing_design">
                             <div class="single-pricing">
                                 <div class="price-head">		
                                     <h2>PREMIUM</h2>
-                                    <h1>INR 900</h1>
+                                    <h1>INR 225 <span><strike style="color: red; font-size: 17px;">INR 900</strike></span></h1>
+                                    
+                                    <span style="color: green;">75% off for first month</span>
                                     <!-- <span>/per call</span> -->
                                 </div>
                                 <ul>
@@ -293,7 +313,7 @@ Insight into student challenges and needs
                                     <li><b>30</b> Minutes each</li>
                                     <li>AI Search</li>
                                     <li>Top Mentor</li>
-                                    <li>(IITans, NITans)</li>
+                                    <li>(IITians, NITians)</li>
                                 </ul>
                                 <div class="pricing-price">
                                     
@@ -302,7 +322,8 @@ Insight into student challenges and needs
                             </div>
                         </div>
                     </div><!--- END COL -->	
-                    <div class="col-lg-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s" data-wow-offset="0" style="visibility: visible; animation-duration: 1s; animation-delay: 0.3s; animation-name: fadeInUp;">
+                    
+                    <!-- <div class="col-lg-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s" data-wow-offset="0" style="visibility: visible; animation-duration: 1s; animation-delay: 0.3s; animation-name: fadeInUp;">
                         <div class="pricing_design">
                             <div class="single-pricing">
                                 <div class="price-head">		
@@ -322,7 +343,7 @@ Insight into student challenges and needs
                                 <a href="#contact" class="price_btn">Contact Us</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!--- END COL -->			  
                 </div><!--- END ROW -->
             </div><!--- END CONTAINER -->
