added login and signup

--- a/templates/google_base.html
+++ b/templates/google_base.html
@@ -26,18 +26,14 @@
 
   {%else%}
   <div class="flex m-auto border w-[90%] justify-center  bg-blue-200 h-20 rounded rounded-lg">
-    <p class="mt-6 ml-3"> Hello.</p>
+    {% comment %} <p class="mt-6 ml-3"> Hello.</p> {% endcomment %}
     <a class="ml-auto mt-6 mr-3" href="{% url 'account_login' %}">Sign in</a>
   </div> 
 
 
   {%endif%}
 
-  <div class="m-auto w-[90%] justify-center">
-    <h1 class="text-3xl font-bold ">
-      Google Autentication
-    </h1>
-  </div>
+
 
 
   <div>
