--- a/templates/aeduz_base.html
+++ b/templates/aeduz_base.html
@@ -31,27 +31,7 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         {% block style %}{% endblock style %}
-        <style>
-            /* Custom styles */
-            .testimonial-item {
-                padding: 30px;
-                color: white;
-                background-color: #0D324D; /* Default background color */
-                border-radius: 10px;
-                text-align: center;
-            }
-        
-            .testimonial-item.active {
-                background-color: #ffc107; /* Active (highlighted) background color */
-            }
-        
-            .testimonial-photo {
-                width: 100px; /* Adjust photo size as needed */
-                height: 100px;
-                border-radius: 50%;
-                margin-bottom: 20px;
-            }
-        </style>
+     
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -73,10 +53,32 @@
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
                         {% if user.is_authenticated %}
-    <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
-{% else %}
-    <li class="nav-item"><a class="nav-link" href="/accounts/google/login/">Google SignUp</a></li>
-{% endif %}
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" style="color: black;background-color: white; border-radius: 10px;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                               {{user.username}}
+                            </a>
+                            <ul class="dropdown-menu">
+                             <li><a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a></li> 
+                             
+                              <!-- <li class="dropdown-item" ><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li> -->
+                            </ul>
+                          </li>
+                        {% else %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            New User?
+                            </a>
+                            <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/login">Login</a></li>
+                            <li><a class="dropdown-item" href="/signup">Signup</a></li>
+                            <li><a class="dropdown-item" href="/accounts/google/login/">Google Signin</a></li>
+                            <!-- <li class="dropdown-item"><a class="nav-link" href="/accounts/google/login/">Google Signin </a></li> -->
+                            <!-- <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+                            </ul>
+                        </li>
+                        {% endif %}
 
 <!-- <a href="{% provider_login_url 'google'%}?next=/new">Login with Google</a> -->
 
