--- a/templates/fail.html
+++ b/templates/fail.html
@@ -1,9 +1,22 @@
-{% extends "base.html" %}
+{% extends "aeduz_base.html" %}
+
+
+
+{% block title %}
+Payment Failure
+{% endblock title %}
+
+
+{% style %}
+
+{% style %}
+
+
 
 {% block content %}
 
 <div class="text-center mt-5 pt-5">
-    {% comment %} <img src="https://icons.veryicon.com/png/o/miscellaneous/new-version-of-star-selected-icon/success-26.png" style="height: 200px;" alt="" class="img-fluid"> {% endcomment %}
+    {% comment %} <img src="https://www.svgrepo.com/show/493668/error-circle-fail-failure-disallowed-x-cross-bad.svg" style="height: 200px;" alt="" class="img-fluid"> {% endcomment %}
     <h2 class="mt-4">
         Your Payment Failed !
     </h2>
