--- a/templates/aeduz_base.html
+++ b/templates/aeduz_base.html
@@ -43,10 +43,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto text-uppercase">
-                        <li class="nav-item"><a class="nav-link" href="#services">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/#about_id">About Us</a></li>
                         <li class="nav-item"><a class="nav-link" href="/institutes">Institutions</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
+                        
                         {% if user.is_authenticated %}
                         <li class="nav-item dropdown">
                             <a class=" dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ user.username }}</a>
@@ -56,14 +55,21 @@
                         </li>
                         {% else %}
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">New User?</a>
+                            <a class=" dropdown-toggle" style="padding-top: 20px;" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">User?</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="/login">Login</a>
+                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="/signup">Signup</a>
-                                <a class="dropdown-item" href="/accounts/google/login/">Google Signin</a>
+                                <div class="dropdown-divider"></div>
+                                 <a class="dropdown-item" href="/accounts/google/login/">Google Signin</a>
                             </div>
+                            <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">New User?</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            </div> -->
                         </li>
                         {% endif %}
+                        <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/#contact">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
