--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -6,13 +6,24 @@
     <h1 class="text-center bg-gray-100 h-[52px] font-bold text-3xl">Sign In</h1>
 
 
-    <h2 class="text-center my-3">You are about to use third party authentication!
+    <h2 class="text-center my-3">
     </h2>
     <form method="post">
         <div class="justify-center mx-3">
             {% csrf_token %}
-            <button type="submit" class="bg-red-200 my-3 rounded-lg w-[100%] p-2">Continue</button>
+            <button id="submitButton" type="submit" class="bg-red-200 my-3 rounded-lg w-[100%] p-2">Continue</button>
         </div>
     </form>
     {% endblock %}
+
+    
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var submitButton = document.getElementById('submitButton');
+            
+            submitButton.click();
+             
+        });
+    </script>
 </div>
