--- a/templates/gfg_index.html
+++ b/templates/gfg_index.html
@@ -46,12 +46,12 @@
 		padding: 20px;
 		text-align: center;
 	}
-	.btn {
+	.btn1 {
 		border-radius: 4px;
 		cursor: pointer;
 		padding: 4px 8px;
-		/* background-color: #16a131; */
-		color: white;
+		background-color: #16a131;
+		color: rgb(255, 255, 255);
 		font-size: 1.2em;
 		font-weight: 600;
 		letter-spacing: 1px;
@@ -72,7 +72,7 @@
 	>
 	<div class="btn_container">
 		<!-- Payment Button -->
-		<button class="btn" id="pay-btn">Pay Now !</button>
+		<button class="btn1" id="pay-btn">Pay Now !</button>
 	</div>
 	</div>
 
